17 October 2012: Wouter
	- Fix alignment problem in zone transfer pipeline code.
	- Fix random generator generating negative.
	- Fix udb radtree strspace creation bug.

15 October 2012: Wouter
	- Fix activated zone does not interrupt transfer.
	- Log of connection failure for zone transfer is neater.

12 October 2012: Wouter
	- Fix invalid time argument in nsd control (for OpenBSD).

11 October 2012: Wouter
	- Fix build on OpenBSD (Thanks Oliver Peter).
	- tpkg for RRL.

10 October 2012: Wouter
	- implement nsd-checkconf option use of rrl-whitelist.

9 October 2012: Wouter
	- with --enable-ratelimit you enable ratelimiting, with verbosity 2
	  it logs what is ratelimited for operational inspection.
	- unit test for rrl.
	- rrl uses mmap to save state across reloads.
	- rrl enum and u16 flags (dnskey type).
	- rrl whitelist and config.

8 October 2012: Wouter
	- Sync with unbound lookup3, has raninit value.

5 October 2012: Wouter
	- fix bug with event loop in zone transfer pipeline.
	- close xfrd_sock_p in server_child because otherwise due to use of
	  kqueue, it gets a broken pipe when that process exits (on FreeBSD).

4 October 2012: Wouter
	 - Fixup no use of internals ev_flags of libevent.

1 October 2012: Wouter
	- fix xfrd tcp skip.

21 September 2012: Wouter
	- tzset before chroot for correct timezone (from Camiel Dobbelaar).
	- pipeline support for AXFR and IXFR tcp queries.

11 September 2012: Wouter
	- writev support for TCP.

28 August 2012: Wouter
	- TXT records with components longer than 255 fail to parse,
	  but without segfault, it continues processing with non NULL value.

27 August 2012: Wouter
	- libevent in server_child.

21 August 2012: Matthijs
	- Fix bug#464: Conditionally define MAXHOSTNAMELEN

20 August 2012: Wouter
	- Fix hang on exit in xfrd.
	- optimized socket counts for zone transfer speed.

13 August 2012: Wouter
	- Fix xfrd libevent events.

10 August 2012: Wouter
	- libevent in xfrd.

26 July 2012: Yuri